[Update] >> RefatoraçÂo da estrutura do projeto. Mudanças no pom e no logback.